# os_course

./: CMakeLists.txt
blablabla/src/: child.cpp  composite.cpp  composite.h  f1  test.cpp
kp/doc/: М80-206Б-22_СЕДОВ_KP.docx
kp/src/: jobs.cpp  main  main.cpp  main1.cpp
lab1/: CMakeLists.txt  README.md
lab1/doc/: М80-206Б-22_СЕДОВ_1.docx
lab1/src/: f1  main.cpp  test.cpp
lab2/: README.md
lab2/doc/: М80-206Б-22_СЕДОВ_2.docx
lab2/src/: main.cpp  main1.cpp  main2.cpp  output  points.txt
lab3/: README.md
lab3/doc/: М80-206Б-22_СЕДОВ_3.docx
lab3/src/: child.cpp  composite.h  filereader.cpp  main.cpp
lab4/: README.md
lab4/doc/: М80-206Б-22_СЕДОВ_4.docx
lab4/src/: CMakeLists.txt  README.md  main.cpp  main1.cpp  test.cpp
lab4/src/E/: exp.cpp  exp.h
lab4/src/GCF/: gcf.cpp  gcf.h
lab5-7/doc/: М80-206Б-22_СЕДОВ_5-7.docx
lab5-7/src/: binTree.h  calculate.cpp  control.cpp  output.txt
lab8/doc/: ~$0-206Б-22_СЕДОВ_8.docx  М80-206Б-22_СЕДОВ_8.docx
